# mds_backend_rust

./: .env  Cargo.toml  compose.dev.yaml
migrations/: 20251006142432_init.down.sql  20251006142432_init.up.sql
src/: config.rs  db.rs  lib.rs  logger.rs  main.rs
src/features/: mod.rs
src/features/employee/: handler.rs  logic.rs  mod.rs  repo.rs
src/features/services/: handler.rs  logic.rs  mod.rs  repo.rs
src/models/: dao.rs  dto.rs  mod.rs  service.rs
tests/: common.rs  employee.rs  services.rs
